--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,17 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+
+
+
+body { 
+	padding-top: 70px;
+	background-color: pink;
+	 
+}
+
+.container {
+	
+}
+
