--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,19 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :post_title %>
+  <div class="form-group">
+    <%= form.text_field :title, placeholder: "Blog Entry Title", class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author, id: :post_author %>
+  <div class="form-group">
+    <%= form.text_field :author, placeholder: "Your name here", class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :blog_entry %>
-    <%= form.text_area :blog_entry, id: :post_blog_entry %>
+  <div class="form-group">
+    <%= form.text_area :blog_entry, placeholder: "Tell us something...", class: "form-control" %>
   </div>
 
   <div class="actions">
